--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,7 +16,7 @@
 
 body {
     font-family: var(--font-family);
-    padding: 1rem 2rem;
+    padding: 1rem 0;
 }
 
 body nav {
@@ -99,4 +99,39 @@ main .about p {
     color: var(--color-paragraphy);
     font-weight: var(--font-weight-ternary);
     max-width: 60vw;
+}
+
+main .measurements {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    padding: 0 1rem 0 5rem;
+    flex-wrap: wrap;
+}
+
+main .measurements div {
+    text-align: left;
+    width: 25%;
+}
+
+main .measurements h2 {
+    color: var(--color-red-primary);
+    font-weight: var(--font-weight-primary);
+    font-size: 4rem;
+    margin-bottom: 0.8rem;
+}
+
+main .measurements span {
+    color: var(--color-black-title);
+    font-weight: var(--font-weight-secondary);
+    font-size: 1.2rem;
+}
+
+main .measurements p {
+    color: var(--color-paragraphy);
+    font-weight: var(--font-weight-ternary);
+    font-size: 16px;
+    margin-top: 0.5rem;
+    width: 90%;
 }
