--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -142,6 +142,7 @@ main .jobs-header {
     justify-content: center;
     align-items: center;
     height: 760px;
+    margin-top: 6rem;
 }
 
 main .jobs-header span {
