--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -348,3 +348,82 @@ main .newsletter p {
     color: #98A2B3;
     font-weight: var(--font-weight-ternary);
 }
+
+@media screen and (max-width: 800px) {
+
+    body nav ul, body nav div {
+        display: none;
+    }
+
+    main .about p {
+        font-size: 1.2rem;
+        max-width: 82%;
+    }
+
+    main .measurements {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        padding: 0 1rem 0 4rem;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    main .measurements div {
+        width: 100%;
+        text-align: left;
+    }
+
+    main .jobs-header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    main .jobs-header p {
+        width: 80%;
+    }
+
+    main .jobs-header img {
+        width: 100vw;
+        height: 16rem;
+        object-fit: cover;
+        object-position: left;
+    }
+
+    main .jobs .container-job {
+        margin: 0 2rem 4rem 2rem;
+        width: 90vw;
+    }    
+
+    main .jobs .informations {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: left;
+        width: 100%;
+    }
+
+    main .testimonial .container__testimonial {
+        width: 100%;
+    }
+
+    main .testimonial p {
+        font-size: 0.9rem;
+    }
+
+    main .testimonial h2 {
+        font-size: 1.4rem;
+    }
+
+    main .newsletter {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2rem 6rem;
+    }
+
+}
