--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -368,6 +368,7 @@ main .newsletter p {
         padding: 0 1rem 0 4rem;
         height: 100vh;
         width: 100vw;
+        flex-wrap: nowrap;
     }
 
     main .measurements div {
@@ -395,9 +396,8 @@ main .newsletter p {
     }
 
     main .jobs .container-job {
-        margin: 0 2rem 4rem 2rem;
         width: 90vw;
-    }    
+    }
 
     main .jobs .informations {
         display: flex;
