--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -365,7 +365,7 @@ main .newsletter p {
         justify-content: space-between;
         align-items: center;
         flex-direction: column;
-        padding: 0 1rem 0 4rem;
+        padding: 0 1rem 2rem 4rem;
         height: 100vh;
         width: 100vw;
         flex-wrap: nowrap;
