--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -107,6 +107,7 @@ main .measurements {
     align-items: flex-start;
     width: 100%;
     padding: 0 1rem 0 5rem;
+    margin-bottom: 10rem;
     flex-wrap: wrap;
 }
 
